# matlab-buildtool-mex

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  buildfile.m
.github/workflows/: ci.yml
cmake/: matlab.cmake
engine/: CMakeLists.txt  TestEngine.m  c.c  c_demo.c  cpp.cpp  cpp_demo.cpp  eng_demo.cpp  env_diagnose.c  env_diagnose.h  fortran.F90  macos_dyld_wrapper.sh
mex/: CMakeLists.txt  TestMex.m  assumer.m
src/: drop_slash.cpp
